--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.0-rc9",
     "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/toast": "^3.2.1",
+    "apollo-link-error": "^1.1.11",
+    "apollo-upload-client": "^11.0.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "graphql-tag": "^2.10.1",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "vuex-persist": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
