--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@nuxtjs/apollo": "^4.0.0-rc9",
     "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/toast": "^3.2.1",
+    "apollo-cache-updater": "^0.1.2",
     "apollo-link-error": "^1.1.11",
     "apollo-upload-client": "^11.0.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "element-ui": "^2.11.1",
     "graphql-tag": "^2.10.1",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
+    "vue-multiselect": "^2.1.6",
     "vuelidate": "^0.7.4",
-    "vuex-persist": "^2.0.1"
+    "vuex-persist": "^2.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
