--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql-tag": "^2.10.1",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
+    "nuxt-vuex-localstorage": "^1.2.6",
     "vue-multiselect": "^2.1.6",
     "vuelidate": "^0.7.4",
     "vuex-persist": "^2.0.1",
