--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.3.0",
     "nodemon": "^1.18.9"
   }
 }
