--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,25 @@
-# This file is a template, and might need editing before it works on your project.
-# Official framework image. Look for the different tagged releases at:
-# https://hub.docker.com/r/library/node/tags/
 image: node:latest
-
-# Pick zero or more services to be used on all builds.
-# Only needed when using a docker container to run your tests in.
-# Check out: http://docs.gitlab.com/ce/ci/docker/using_docker_images.html#what-is-a-service
-
-# This folder is cached between builds
-# http://docs.gitlab.com/ce/ci/yaml/README.html#cache
 test_server:
   before_script:
     - apt-get update
     - apt-get --yes --force-yes install rsync
-
   only:
     refs:
       - develop
-    
   script:
-   - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-   # Run ssh-agent (inside the build environment)
-   - eval $(ssh-agent -s)
-   # Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
-   - ssh-add <(echo "$SSH_PRIVATE_KEY_EQUILIBRA_FRONTEND")
-   - mkdir -p ~/.ssh
-   - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-   # sync the files and restart the app
-   - rsync -avrc --delete --exclude=.env "$PWD/" root@$SERVER_IP:/var/www/html/$PROJECT_NAME/
-   - ssh root@$SERVER_IP "cd /var/www/html/$PROJECT_NAME; npm install; npm run generate"
+      # Search for the ssh-agent  
+    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+      # Start the ssh-agent
+    - eval $(ssh-agent -s)
+      # Add the SSH Key stored in the SSH_PRIVATE_KEY variable to the agent store
+    - ssh-add <(echo "$SSH_PRIVATE_KEY")
+      # Create the .ssh folder
+    - mkdir -p ~/.ssh
+      # Prevent ssh public key confirmation 
+    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+      
+      # Install dependencies
+    - npm install
+    - npm run generate
+      # Copy (Synchronize) the files to the deployed server
+    - rsync -avrc --delete --exclude=.env "$PWD/dist" root@test.natterbase.com:/var/www/html/equilibra_frontend/
