--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,6 @@ test_server:
       
       # Install dependencies
     - npm install
-    - npm run build
+    - npm run generate
       # Copy (Synchronize) the files to the deployed server
     - rsync -avrc --delete --exclude=.env "$PWD/dist" root@test.natterbase.com:/var/www/html/equilibra_frontend/
