--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql-tag": "^2.10.1",
     "gulp": "^4.0.2",
     "gulp-html-minifier": "^0.1.8",
+    "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
