--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,19 +7,17 @@ test_server:
     refs:
       - develop
   script:
-      # Search for the ssh-agent  
-    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-      # Start the ssh-agent
+    # Search for the ssh-agent
+    - "which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )"
+    # Start the ssh-agent
     - eval $(ssh-agent -s)
       # Add the SSH Key stored in the SSH_PRIVATE_KEY variable to the agent store
     - ssh-add <(echo "$SSH_PRIVATE_KEY")
       # Create the .ssh folder
     - mkdir -p ~/.ssh
-      # Prevent ssh public key confirmation 
+      # Prevent ssh public key confirmation
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-      
       # Install dependencies
     - npm install
-    - npm run generate
       # Copy (Synchronize) the files to the deployed server
     - rsync -avrc --delete --exclude=.env "$PWD/dist" root@test.natterbase.com:/var/www/html/equilibra_frontend/
