--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate && gulp"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.0-rc9",
