--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "equilibra",
   "version": "1.0.0",
   "description": "A web application forum for discussing politics",
-  "author": "Iwuanyanwu Chiamaka",
+  "author": "Iwuanyanwu Chiamaka, Ahman Emmanuel",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt --open",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
