--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,5 +20,5 @@ test_server:
       # Install dependencie
       # Copy (Synchronize) the files to the deployed server
     - rsync -avrc --delete --exclude=node_modules "$PWD/" root@test.natterbase.com:/var/www/html/equilibra_frontend/
-    
-    - ssh root@$SERVER_IP "cd /var/www/html/equilibra_frontend/; /root/.nvm/versions/node/v12.13.1/bin/npm i; /root/.nvm/versions/node/v12.13.1/bin/pm2 restart equilibra-frontend"
+
+    - ssh root@$SERVER_IP "cd /var/www/html/equilibra_frontend/; /root/.nvm/versions/node/v12.13.1/bin/npm i;"
