--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "equilibra",
   "version": "1.0.0",
@@ -5,7 +6,7 @@
   "author": "Iwuanyanwu Chiamaka, Ahman Emmanuel",
   "private": true,
   "scripts": {
-    "dev": "nuxt --open",
+    "dev": "nuxt --port 3001",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
@@ -21,6 +22,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cloudinary": "^1.16.0",
+    "cross-env": "^6.0.3",
     "element-ui": "^2.11.1",
     "graphql-tag": "^2.10.1",
     "gulp": "^4.0.2",
