--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cloudinary": "^1.16.0",
+    "cross-env": "^6.0.3",
     "element-ui": "^2.11.1",
     "graphql-tag": "^2.10.1",
     "gulp": "^4.0.2",
